# NuFlatAna

./: CMakeLists.txt  README.md  run_flats.sh  setup.sh
app/: CMakeLists.txt  run_cohpiana.C
plotter/cohpixsec/: draw_xsecs.C
plotter/include/: mylib.h
src/: AnalyzerCore.C  AnalyzerCore.h  CMakeLists.txt  FSP.C  FSP.h  FlatTree.C  FlatTree.h  cohpiana.C  cohpiana.h
